--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ install:
   - pip install -r requirements.txt
   - python setup.py install
 # command to run tests
+script:
+  - python tests/test.py
 notifications:
   email: true
