--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: python
 python:
   - "2.7"
 # command to install package
-install:
+before_install:
   - pip install setuptools --upgrade
   - pip install -r requirements.txt
+install:
   - python setup.py install
 # command to run tests
 script:
